Fixed bug with styles on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,7 +110,7 @@ main > section{
 }
 /* side listing section */
 #side-listing{
-	 height: 560px;
+	 /*height: 560px;*/
 	 width:100vw;
 	 left: 0px;
     position: relative;
@@ -136,11 +136,11 @@ main > section{
     color: #ffffff;
 }
 
-/* main content section*/
+/* main content section */
 #main-content{
 	margin-left:10px;
+	top:-20px;
 	left:10px;
-	top:600px;
 	width: 75%;
 	height: 100%;
 }
